[fix] white space break

--- a/src/common/components.scss
+++ b/src/common/components.scss
@@ -17,6 +17,10 @@
   }
 }
 
+code {
+  white-space: break-spaces;
+}
+
 .botsquad-components {
   @keyframes slide-in {
     0% {
